# false_sharing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
